--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,52 +1,71 @@
-.containerCard{
-    width: 25%;
+.contenedorLista{
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    flex-direction: column;
     flex-wrap: wrap;
-    margin: 15px;
-    height: auto;
-
+    margin:auto;
 }
 
-.card{
+.cardContainer {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
     align-items: center;
-    width: 80%;
-    margin: auto;
-    padding: 10px;
-    height: auto;
-    background-color: rgb(225, 123, 238);
-    border-radius: 10px;
-
-
+    background-color: #38f141;
+    padding: 15px;
+    margin: 5px;
+    box-shadow: 2px 1px 1px #474747b2;
+    border-radius: 5px;
+    width: 220px;
+    height: 480px ;
 }
 
-.card .imagen{
-    width: 100%;
+.imageCard {
+    width: 80%;
+    height: auto;
     padding: 5px;
     display: flex;
     justify-content: center;
-    align-items: center;
 
 }
 
-.imagen img{
-    width: 250px;
-    height: 250px;
+.imageCard img {
+    width: 100%;
+    height: 270px;
     margin: auto;
+    border-radius: 15px;
 }
 
-.details{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width:100%;
-    text-align: center;
+.detailsCard {
+    width: 80%;
 
+}
+
+.detailsCard h5 {
+    width: 100%;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.linkContainer{
+   margin-top: 15px;
+}
+
+.price {
+    margin-bottom: 15px;
+}
+
+.linkVerDetalle{
+    background-color: #323232;
+    color: aliceblue;
+    font-size: large;
+    border: black;
+    border-style: solid;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 5px;
 }
