--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,11 +1,9 @@
 .ListGroup {
     display: flex;
-    width: 100%;
+    width: 80%;
     justify-content:center;
     flex-direction: row;
-    align-items: center;
-    align-content: center;
     flex-wrap: wrap;
-    margin:10px auto;
+    margin: auto;
 
 }
